--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "package",
+  "name": "2024-spring",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "description": "- Create another repo",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js --watch server/"
+  },
   "dependencies": {
+    "dayjs": "^1.11.10",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
+
 }
